# catapult

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Dockerfile.alpine  Dockerfile.raspberrypi  Doxyfile  Makefile  README.md  cwt_usage.md  docker-build.sh  docker-compose.yml  docker-test.sh  justfile
.github/workflows/: ci.yml  format.yml
benchmarks/: base64_bench.cpp  cbor_bench.cpp  crypto_bench.cpp  memory_pool_bench.cpp  secure_vector_bench.cpp  token_bench.cpp  trie_bench.cpp
docker/: analyze.sh  benchmark.sh  build.sh  test.sh
examples/: cat_cwt_crypto.cpp  cat_cwt_per_signature_example.cpp  cat_token_json_example.cpp  moqt_dpop_example.cpp
include/catapult/: base64.hpp  cat_base64.hpp  cat_error.hpp  cat_memory_pool.hpp  cat_trie.hpp  claims.hpp  composite.hpp  composite_impl.hpp  crypto.hpp  cwt.hpp  dpop.hpp  error.hpp  json_serialization.hpp  jwk.hpp  logging.hpp  memory_pool.hpp  moqt_claims.hpp  secure_vector.hpp  token.hpp  token_factory.hpp  trie.hpp  uri.hpp  validator.hpp
src/: base64.cpp  cat_base64.cpp  cat_error.cpp  cat_trie.cpp  claims.cpp  composite.cpp  crypto.cpp  cwt.cpp  dpop.cpp  error.cpp  json_serialization.cpp  jwk.cpp  moqt_claims.cpp  token.cpp  trie.cpp  uri.cpp  validator.cpp
tests/: base64.cpp  claims.cpp  composite_claims.cpp  crypto.cpp  cwt.cpp  cwt_crypto.cpp  cwt_encode_decode.cpp  cwt_signing.cpp  integration.cpp  memory_pool.cpp  moqt_claims.cpp  rfc8152_compliance.cpp  secure_vector.cpp  test_base64.cpp  test_memory_pool.cpp  test_trie.cpp  token.cpp  token_factory.cpp  trie.cpp  validator.cpp
